<resources>
    <string name="app_name">UniTube</string>
    <string name="Login">Login</string>
    <string name="user_name">user name:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="password">password:</string>
    <string name="restore_password">forgot your password?:</string>
    <string name="default_text">complete here later</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="sign_up">Sign me up!</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="sign_up_title">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Login!</string>
    <string name="logo">LOGO</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name_instruction">Must contain letters only</string>
    <string name="user_name_instruction">Must contain letters and numbers only</string>
    <string name="password_instructions">at least 8 characters, letters and numbers only.</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="add_to_playlist">add movie to playlist</string>
    <string name="logo_description">logo for UniTube</string>
    <string name="menu_description">open menu icon</string>
    <string name="search_hint">search in the app</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="add_video">add new video</string>
    <string name="toggle_mode">toggle mode</string>
    <string name="home">home page</string>
    <string name="dark_mode_button">dark mode bottun</string>
    <string name="sign_out_icon">Sign out icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="uploader_name">Uploader Name</string>
    <string name="video_description">Video Description</string>
    <string name="video_title">Video Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">comments close</string>
    <string name="your_account">Your Account</string>
    <string name="history">History</string>
    <string name="playlists">Playlists</string>
    <string name="switch_account">Switch Account</string>
    <string name="setting">Setting</string>
    <string name="upload_video_cover">upload video\ncover</string>
    <string name="upload_video">upload video</string>
    <string name="add_video_button">Add Video</string>
    <string name="video_uri">Video URI</string>
    <string name="welcome_to_unitube">welcome to UniTube</string>
    <string name="welcome">welcome</string>
    <string name="play_pause">Play/Pause the video</string>
    <string name="BaseUrl">mongodb://10.0.2.2:27017/unitube</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="edit_user_button">edit user button</string>
    <string name="user_name_can_t_be_changed">user name can\'t be changed</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="videos">videos</string>
    <string name="community">community</string>
    <string name="subscribe">subscribe</string>
    <string name="full_name">firstName -- lastName</string>
    <string name="back_to_home_page">back to home page</string>
</resources>
