<!-- res/layout/dialog_edit_user.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/default_profile_image"
        android:contentDescription="@string/profile_photo"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/change_profile_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_picture"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- First Name -->
    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <!-- Last Name -->
    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <!-- Password -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <!-- Password -->
    <EditText
        android:id="@+id/edit_reEnter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <!-- User Name (Non-editable) -->
    <TextView
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_can_t_be_changed"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="16dp"
        android:enabled="false"  />

</LinearLayout>

