<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AddVideoTitle"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_video"

        app:layout_constraintBottom_toTopOf="@+id/textBoxSignUpLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/textBoxSignUpLayout"
        style="@style/textBoxLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/textBoxLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/textBoxLayout"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/videoTitle"
                android:autofillHints="title"
                android:hint="@string/video_title"
                android:inputType="text"
                style="@style/editText" />

            <EditText
                android:id="@+id/videoDescription"
                android:autofillHints="description"
                android:hint="@string/video_description"
                android:inputType="text"
                style="@style/editText"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/uploadVideoCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/uploadVideoCoverButton"
                style="@style/my_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_video_cover" />

            <ImageView
                android:id="@+id/uploadVideoCoverImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/uploadVideoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/uploadVideoButton"
                style="@style/my_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showVideoPickerOptions"
                android:text="@string/upload_video" />

            <TextView
                android:id="@+id/videoUri"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="video uri"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/video_uri" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/AddVideoButton"
        android:text="@string/add_video_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoxSignUpLayout"
        style="@style/my_Btn" />


</androidx.constraintlayout.widget.ConstraintLayout>