<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- User Details Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/default_profile_image"
            android:contentDescription="@string/profile_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:text="@string/full_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:layout_gravity="start"
                android:textColor="@android:color/darker_gray" />


            <LinearLayout
                android:id="@+id/subscribe_layout_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/subscribe_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/subscribe_icon"
                    android:layout_gravity="center"
                    android:paddingTop="8dp" />

                <TextView
                    android:id="@+id/subscribe_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="3dp"
                    android:text="@string/subscribe"
                    android:layout_gravity="center"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/videos_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/video_icon"
                android:layout_gravity="center"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/videos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:layout_gravity="center"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlists_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/playlist_icon"
                android:layout_gravity="center"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/playlist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                android:layout_gravity="center"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/community_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/community_icon"
                android:layout_gravity="center"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/community_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:layout_gravity="center"
                android:paddingTop="8dp" />
        </LinearLayout>


    </LinearLayout>

    <!-- Dividing Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- RecyclerView to display video items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videosRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/backToHomePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home_page"
        android:layout_gravity="center" />
</LinearLayout>
