<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:gravity="center">

    <FrameLayout
        android:id="@+id/add_video_container"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/button_add_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_video"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_video"
            android:scaleType="fitCenter"
            app:tint="?attr/colorOnPrimary"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            android:scaleType="fitCenter"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/toggle_mode_container"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_background"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/button_toggle_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_dark_mode"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_mode"
            android:scaleType="fitCenter"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

</LinearLayout>
